spade-tests/src/snapshots/spade_tests__typeinference__type_error_on_port_set_to_port.snap
---
source: spade-tests/src/typeinference.rs
---
// NOTE: returning bool because we don't support unit types
entity set_port(p: inv &int<10>, v: inv &int<10>) -> bool {
    set p = v;
    false
}


error: Expected type int<10>, got inv &int<10>
  ┌─ testinput:3:13
  │
2 │ entity set_port(p: inv &int<10>, v: inv &int<10>) -> bool {
  │                    ------------     ------------ Type inv &int<10> inferred here
  │                    │                 
  │                    Type int<10> inferred here
3 │     set p = v;
  │             ^ Expected int<10>
  │
  = note: Expected: int<10>
               Got: inv &int<10>
